--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,15 @@
         "corsheaders",
         "eventgamer",
         "gametype",
+        "gametypes",
         "levelup",
-        "levelupapi"
-    ]
+        "levelupapi",
+        "viewsets"
+    ],
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true,
+    "python.linting.pylintArgs": [
+        "--load-plugins=pylint_django",
+        "--django-settings-module=<folder name>.settings",
+    ],
 }
